--- a/smb.conf
+++ b/smb.conf
@@ -1,7 +1,7 @@
 
 [global]
    workgroup = WORKGROUP
-   netbios name = orangepi
+   netbios name = sambasrv
    dns proxy = no
    log file = /var/log/samba/log.%m
    max log size = 1000
